# ectf2025_pruebas

./: .gitignore
decoder/: project.mk
decoder/inc/: host_messaging.h
decoder/src/: decoder.c
design/: pyproject.toml
design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py  utils.py
tools/: pyproject.toml
